# IBDCluster

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  DRIVE_envi.yml  Gemfile  Makefile  README.md  _config.yml  about.md  changelog.md  config.json  environment.yml  index.md  installation.md  pyproject.toml  requirements.txt  requirements_poetry.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  black_on_push.yml
IBDCluster/: IBDCluster.py
IBDCluster/analysis/: __init__.py  gini_coefficient.py  main.py  percentages.py
IBDCluster/callbacks/: __init__.py  check_inputs.py
IBDCluster/cluster/: __init__.py  main.py  phecode_percentages.py
IBDCluster/factory/: factory.py
IBDCluster/log/: __init__.py  logger.py
IBDCluster/models/: __init__.py  cluster_class.py  data_container.py  indices.py  pairs.py  writers.py
IBDCluster/plugins/: __init__.py  allpair_writer.py  factory.py  loader.py  network_writer.py  phecode_counter.py  phecode_percentages.py  phecode_pvalue_distributions.py  pvalues.py  significant_phecode_counts.py  uml_for_new_plugin.md
_posts/: 2022-08-14-test_post_2.md  2022-08-15-test_post.md  2022-8-25-changelog.md
_site/: about.html  changelog.html  index.html
_site/documentation/: api_design.html  customization.html  design_your_own.html  design_your_own_plugin.html  docker.html  github.html  index.html  inputs.html  installation.html  outputs.html  pip.html  stock_plugins.html
_site/examples/: index.html
docs/: CHANGELOG.md  requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  inputs.rst  output.rst
documentation/: api_design.md  customization.md  design_your_own_plugin.md  docker.md  github.md  index.md  inputs.md  installation.md  outputs.md  pip.md  stock_plugins.md
drive/: DRIVE.py  callbacks.py  drive.py  generate_indices.py
drive/cluster/: __init__.py  cluster.py
drive/filter/: filter.py
drive/filters/: filter.py
drive/models/: __init__.py  choices.py  data_container.py  generate_indices.py  types.py
drive/plugins/: network_writer.py  pvalues.py
drive/utilities/: load_phenotypes.py
examples/: index.md
profiles/: python3_6_drive.prof  python_3_8_drive_dcm_hh.prof
tests/: phecode_descriptions.txt  test.env  test_filter.py  test_integration.py  test_main_cluster.py  test_phenotype_file_parser.py
tests/test_data/: 20_percent_affected_phecode_matrix.txt  50_percent_affected_phecode_matrix.txt  5_percent_affected_phecode_matrix.txt  80_percent_affected_phecode_matrix.txt  HK2_gene_info_1_31_22.txt  README.md  (+3 more)
(+37 files in other folders)
