[tool.poetry]
name = "drive"
version = "1.0.0"
description = "cli tool to identify networks of individuals who share IBD segments overlapping loci of interest"
authors = ["jtb <james.baker@vanderbilt.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pandas = "1.1.5"
python-igraph = "0.9.6"
numpy = "1.19.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
