[tool.poetry]
name = "drive"
version = "1.0.0"
description = "cli tool to identify networks of individuals who share IBD segments overlapping loci of interest"
authors = ["James Baker <james.baker@vanderbilt.edu>", "Hung-Hsin Chen <hung-hsin.chen.1@vumc.org>"]
maintainers = ["James Baker <james.baker@vanderbilt.edu>", "Hung-Hsin Chen <hung-hsin.chen.1@vumc.org>"]
readme = "README.md"
repository = "https://github.com/belowlab/drive"
keywords = ["python", "genetics", "identity by descent", "relatedness"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6"
]

[tool.poetry.scripts]
my_package_cli = 'drive.drive:run'

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pandas = "1.1.5"
python-igraph = "0.9.6"
numpy = "1.19.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
