[tool.poetry]
name = "drive"
version = "1.0.0"
description = "cli tool to identify networks of individuals who share IBD segments overlapping loci of interest"
authors = ["James Baker <james.baker@vanderbilt.edu>", "Hung-Hsin Chen <hung-hsin.chen.1@vumc.org>"]
maintainers = ["James Baker <james.baker@vanderbilt.edu>", "Hung-Hsin Chen <hung-hsin.chen.1@vumc.org>"]
readme = "README.md"
repository = "https://github.com/belowlab/drive"
keywords = ["python", "genetics", "identity by descent", "relatedness"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6"
]

[tool.poetry.scripts]
my_package_cli = 'drive.drive:run'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "1.1.5"
python-igraph = "0.9.6"
numpy = "1.19.5"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.42.1"
pre-commit = "^3.2.1"
black = "^23.1.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
